--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# Generated files
+.idea/**/contentModel.xml
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+
 # Compiled class file
 *.class
 
